.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------
- Show user's fullname in form header in prefs_user_details
  [esteele]

- Deprecated plone_prefs/prefs_search_macros.pt
  [esteele]

- Deprecated plone_prefs/prefs_user_memberships.pt,
  plone_prefs/prefs_user_details.cpt,
  plone_prefs/prefs_user_memberships.pt.metadata,
  plone_prefs/prefs_user_membership_edit.py,
  plone_prefs/prefs_user_group_search.py. Functionality is now handled by
  @@usergroup-usermembership.
  [esteele]

- Overlay form on @@usergroup-groupprefs and @@usergroup-userprefs now
  redirects to the current page instead of reloading it. Reloading caused a
  resubmission of the last form action (such as "delete") which threw an
  error.
  [esteele]

- Deprecated plone_deprecated/prefs_group_members.cpt,
  prefs_group_members.cpt.metadata, prefs_group_members_add.cpy,
  prefs_group_members_add.cpy.metadata, prefs_group_members_delete.cpy,
  prefs_group_members_delete.cpy.metadata. These are now handled by
  @@usergroup-groupmembership in plone.app.controlpanel
  [esteele]

- In the tests, patch the MockMailHost to give it a secureSend method,
  just like we already patch the real MailHost.
  [maurits]

- Make QuickInstallerTool.upgradeProduct() able to handle upgradeSteps
  directive.
  Closes http://dev.plone.org/plone/ticket/9455 
  [cah190]

- Update jquery.js to use jquery-1.4.min.js. The change is in
  Plone3rdParty/branches/4.0/skins/plone_3rdParty
  [smcmahon]

- Remove explicit iefixes (css and js) from the main_template, which
  will be pulled now from the ResourceRegistries, using the
  conditionalcomments property.
  Refs http://dev.plone.org/plone/ticket/9278.
  [dukebody]

- Move iefixes.js to the ploneclassic.theme package, since we agreed