@@ -127,6 +127,11 @@ class TestPortalCreation(PloneTestCase.PloneTestCase, WarningInterceptor):
         self.assertEqual(len(res), 1)
         self.assertEqual(res[0].getId, 'Members')
         self.assertEqual(res[0].Title, 'Users')
+    
+    def testMembersFolderOrdering(self):
+        # Members folder should not have explicit ordering
+        members = self.membership.getMembersFolder()
+        self.assertEqual(members._ordering, 'unordered')
 
     def testMailHost(self):
         # MailHost should be of the standard variety
@@ -282,6 +287,7 @@ class TestPortalCreation(PloneTestCase.PloneTestCase, WarningInterceptor):
         self.failUnless('news' in self.portal.objectIds())
         folder = getattr(self.portal, 'news')
         self.assertEqual(folder.portal_type, 'Folder')
+        self.assertEqual(folder._ordering, 'unordered')
         self.assertEqual(folder.getDefaultPage(), 'aggregator')
         self.assertEqual(folder.getRawLocallyAllowedTypes(), ('News Item',))
         self.assertEqual(folder.getRawImmediatelyAddableTypes(), ('News Item',))
@@ -291,6 +297,7 @@ class TestPortalCreation(PloneTestCase.PloneTestCase, WarningInterceptor):
         self.failUnless('events' in self.portal.objectIds())
         folder = getattr(self.portal, 'events')
         self.assertEqual(folder.portal_type, 'Folder')
+        self.assertEqual(folder._ordering, 'unordered')
         self.assertEqual(folder.getDefaultPage(), 'aggregator')
         self.assertEqual(folder.getRawLocallyAllowedTypes(), ('Event',))
         self.assertEqual(folder.getRawImmediatelyAddableTypes(), ('Event',))
